# aries-staticagent-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MAINTAINERS.md  README.md  RELEASES.md  keygen.py  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: code-quality-check.yml  publish-release.yml  publish_release.yml  requirements.cqc.txt  test_on_pr.yml  tests.yml
aries_staticagent/: __init__.py  agent.py  connection.py  crypto.py  dispatcher.py  message.py  messages.py  module.py  mtc.py  operators.py  static_agent_connection.py  static_connection.py  type.py  utils.py
aries_staticagent/dispatcher/: __init__.py  base.py  handler_dispatcher.py  queue_dispatcher.py
docs/: Gemfile  Makefile  _config.yml  index.md
docs/_includes/examples/: cron.py  return_route_client.py  return_route_server.py
docs/_layouts/: default.html
docs/aries_staticagent/: connection.html  crypto.html  dispatcher.html  index.html  message.html  module.html  mtc.html  static_connection.html  type.html  utils.html
examples/: common.py  cron.py  cron_returnroute.py  preprocessors.py  return_route_client.py  return_route_server.py  webserver_aiohttp.py  webserver_with_module.py  webserver_with_websockets.py
src/: agent.py  messages.py
tests/: test_agent.py  test_conditionally_await_future_message.py  test_connection.py  test_crypto.py  test_dispatcher.py  test_examples.py  test_message.py  test_module.py  test_msg_queue.py  test_mtc.py  test_operators.py  test_pack_unpack.py  test_routing.py  test_send.py  test_static_connection.py  test_type.py  test_utils.py
